@@ -246,6 +246,8 @@ Included
 - Native report viewer workflow is the default operator path; Notepad is no longer the primary report UX.
 - Report viewer startup hardened: host console launches hidden while the report viewer opens in normal visible state for review.
 - Launchpad History UX improvements: direct View Report action and keyboard open behavior (double-click/Enter).
+- Report viewer now includes a collapsed Adapter Evidence section (shown only when adapter/capability artifacts exist), with quick-open buttons for capability, summary, and findings JSON artifacts.
+- Launchpad History now shows an Adapter tag column (including plugin usage and denied-capability marker) derived from the latest run receipt.
 - New bind/unbind right-click flow:
 - Bind to WeftEnd and Unbind from WeftEnd verbs for files, shortcuts, and folders.
 - .lnk rewrap mode preserves icon and stores an original shortcut backup for safe restoration.
